--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,17 @@
     package="com.njust"
     android:versionCode="10"
     android:versionName="1.0">
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="23" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
 
     <application
         android:name="com.njust.VMApplication"
@@ -21,7 +23,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:persistent="true">
         <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -40,14 +43,14 @@
 
         <service android:name="com.njust.major.service.VMService"
             android:exported="true">
-            <intent-filter>
+            <intent-filter android:priority = "1000">
                 <action android:name="android.intent.action.VMService" />
             </intent-filter>
         </service>
         <service android:name="com.njust.major.service.OutGoodsService" />
 
         <receiver android:name=".major.receive.OutGoodsReceive">
-            <intent-filter>
+            <intent-filter android:priority = "1000">
                 <action android:name="Avm.START_OUTGOODS" />
             </intent-filter>
         </receiver>
